ECM-4470 add maxpermsize to tomcat, jboss, jonas patch to prevent OutOfMemory