@@ -9,7 +9,7 @@ set LOG_OPTS=-Dorg.apache.commons.logging.Log=org.apache.commons.logging.impl.Si
 set EXO_OPTS="-Dexo.product.developing=true"
 set BONITA_HOME=%JONAS_ROOT%\bonita
 set EXO_CONFIG_OPTS="-Dorg.exoplatform.container.configuration.debug"
-set JAVA_OPTS=-Xshare:auto -Xms128m -Xmx512m %LOG_OPTS% %EXO_OPTS% %EXO_CONFIG_OPTS%
+set JAVA_OPTS=-Xshare:auto -Xms128m -Xmx512m -XX:MaxPermSize=256m %LOG_OPTS% %EXO_OPTS% %EXO_CONFIG_OPTS%
 
 rem Launches the server
 cd %NT_DIR%
