@@ -12,7 +12,7 @@ set LOGGING_OPTS="-Djava.util.logging.config.file=..\server\default\conf\logging
 set SECURITY_OPTS="-Djava.security.auth.login.config=..\conf\jaas.conf"
 set EXO_OPTS="-Dexo.product.developing=false"
 set EXO_CONFIG_OPTS="-Dorg.exoplatform.container.configuration.debug"
-set JAVA_OPTS=-Xshare:auto -Xms128m -Xmx512m %LOG_OPTS% %SECURITY_OPTS% %EXO_OPTS% %EXO_CONFIG_OPTS% %BONITA_OPTS% %LOGGING_OPTS%
+set JAVA_OPTS=-Xshare:auto -Xms128m -Xmx512m -XX:MaxPermSize=256m %LOG_OPTS% %SECURITY_OPTS% %EXO_OPTS% %EXO_CONFIG_OPTS% %BONITA_OPTS% %LOGGING_OPTS%
 set JPDA_TRANSPORT=dt_socket
 set JPDA_ADDRESS=8000
 
